--- a/03-Visualize-Data-solutions.Rmd
+++ b/03-Visualize-Data-solutions.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Visualize Data (solutions)"
-output: html_document
+output:
+  github_document: 
+    df_print: tibble
+  html_document:
+    df_print: paged
 ---
 
 <!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License, adapted from the orignal work at https://github.com/rstudio/master-the-tidyverse by RStudio. -->
