--- a/07-rmarkdown/04_yaml-header-solutions.Rmd
+++ b/07-rmarkdown/04_yaml-header-solutions.Rmd
@@ -6,6 +6,9 @@ output:
     df_print: paged
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
+
 ```{r setup, include=FALSE}
 country_name <- "New Zealand"
 ```
