--- a/07-rmarkdown/02_text-blocks-solutions.Rmd
+++ b/07-rmarkdown/02_text-blocks-solutions.Rmd
@@ -3,6 +3,9 @@ title: New Zealand
 output: html_document
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
+
 ```{r setup, include=FALSE}
 country_name <- "New Zealand"
 ```
