--- a/07-rmarkdown/06_any-report-solutions.Rmd
+++ b/07-rmarkdown/06_any-report-solutions.Rmd
@@ -12,6 +12,8 @@ params:
     choices: !r levels(gapminder$country)
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE)
 country_name <- params$country
